# canal-kafka-config

./: .gitignore  README.md  docker-compose-kafka.yaml
conf/: canal.properties  kafka_client_jaas.conf
conf/example/: instance.properties
config/kafka/: client.properties
test_scripts/: async_integration_test.py  pyproject.toml
