[project]
name = "test-scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "deloz",email = "npmbot@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymysql (>=1.1.1,<2.0.0)",
    "kafka-python (>=2.2.11,<3.0.0)",
    "mysql-connector-python (>=9.3.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

